# StreamVault-Pro

./: BUSINESS_ARCHITECTURE.md  CHANGELOG.md  COMMERCIAL.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRODUCT_FEATURES.md  PROJECT_SUMMARY.md  README.md  README_EN.md  RELEASE_GUIDE.md  docker-compose.yml  main.py  pyproject.toml  requirements-web.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
app/: app_manager.py  installation_manager.py
app/core/: config_manager.py  license_manager.py  record_manager.py  stream_manager.py  update_checker.py
app/core/oss/: __init__.py  oss_manager.py
app/core/platform_handlers/: __init__.py
app/core/speech_recognition/: __init__.py  base_provider.py  speech_recognition_manager.py  subtitle_generator.py
app/core/speech_recognition/providers/: __init__.py  aliyun_provider.py  tencent_provider.py
app/messages/: message_pusher.py  notification_service.py
app/ui/components/: recording_card.py  recording_dialog.py  transcript_dialog.py
app/ui/navigation/: sidebar.py
app/ui/themes/: theme.py  theme_manager.py
app/ui/views/: about_view.py  home_view.py  license_view.py  settings_view.py  storage_view.py  transcripts_view.py
app/utils/: performance_optimizer.py
config/: default_settings.json  version.json
locales/: en.json  zh_CN.json
